--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="grid one">
 
       <div class="profile-container">
-      <img src="images\image-daniel.jpg" alt="Daniel profile">
+      <img src="images/image-daniel.jpg" alt="Daniel profile">
       <div class="name-graduate">
   <h2>Daniel Clifford</h2>
   <p>Verified Graduate</p>
@@ -36,7 +36,7 @@
 
 <div class="grid two">
   <div class="profile-container">
-  <img src="images\image-jonathan.jpg" alt="Jonathan profile">
+  <img src="images/image-jonathan.jpg" alt="Jonathan profile">
   <div class="name-graduate">
    <h2>Jonathan Walters</h2>
   <p>Verified Graduate</p>
@@ -51,7 +51,7 @@
 
 <div class="grid three">
   <div class="profile-container">
-  <img src="images\image-jeanette.jpg" alt="Jeanette profile">
+  <img src="images/image-jeanette.jpg" alt="Jeanette profile">
   <div class="name-graduate">
   <h2>Jeanette Harmon</h2>
   <p>Verified Graduate</p>
@@ -66,7 +66,7 @@
 
 <div class="grid four">
   <div class="profile-container">
-  <img src="images\image-patrick.jpg" alt="Patrick profile">
+  <img src="images/image-patrick.jpg" alt="Patrick profile">
   <div class="name-graduate">
   <h2>Patrick Abrams</h2>
   <p>Verified Graduate</p>
@@ -84,7 +84,7 @@
 
   <div class="grid five">
     <div class="profile-container">
-    <img src="images\image-kira.jpg" alt="Kira profile">
+    <img src="images/image-kira.jpg" alt="Kira profile">
   <div class="name-graduate">
     <h2>Kira Whittle</h2>
   <p>Verified Graduate</p>
